<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_main_title">My Nanodegree Apps!</string>
    <string name="app1_spotify_streamer">Spotify Streamer</string>
    <string name="app2_scores">Scores App</string>
    <string name="app3_library">Library App</string>
    <string name="app4_build_it_bigger">Build It Bigger</string>
    <string name="app5_xyz_reader">XYZ Reader</string>
    <string name="app6_capstone">Capstone: My Own App</string>

</resources>
